# PhoneControl

./: .gitignore  CHANGELOG.md  OPTIMIZATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.devcontainer/: README.md  devcontainer.json  install-novnc-desktop.sh  post-create.sh  post-start.sh  start-novnc.sh
.github/workflows/: build.yml
docs/: introduction.md
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs  state.rs  ws.rs
src-tauri/src/adb/: adb_helper.rs  commands.rs  device.rs  mod.rs  scan.rs  scrcpy_client.rs  scrcpy_control.rs  screenshot.rs  server.rs  stream.rs  tcpip.rs
src/components/: AuthorizationDialog.module.css  AuthorizationDialog.tsx
src/components/DeviceGrid/: DeviceCard.module.css  DeviceCard.tsx  DeviceGrid.module.css  DeviceGrid.tsx
src/components/ScanDialog/: ScanDialog.module.css  ScanDialog.tsx
src/components/Sidebar/: DeviceList.module.css  DeviceList.tsx  FpsSlider.module.css  FpsSlider.tsx  ServerList.module.css  ServerList.tsx  Sidebar.module.css  Sidebar.tsx
src/components/Toolbar/: Toolbar.module.css  Toolbar.tsx
src/hooks/: useAdbCommands.test.ts  useAdbCommands.ts  useDevices.ts  useScreenshot.ts  useStream.integration.test.tsx  useStream.test.ts  useStream.ts
src/store/: index.ts
src/styles/: globals.css  theme.css
src/types/: index.ts
src/utils/: canvasRegistry.ts  h264Utils.ts  imageLayout.test.ts  imageLayout.ts
