[package]
name = "phone-control"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phone_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
dirs-next = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wait-timeout = "0.2"

# Local WebSocket for high-frequency video frames
tokio-tungstenite = "0.27"
tungstenite = "0.27"
futures-util = "0.3"
fxhash = "0.2"
bytes = "1"
